--- a/package.json
+++ b/package.json
@@ -9,20 +9,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
-    "express-mongo-sanitize": "^2.0.2",
-    "express-rate-limit": "^5.2.6",
     "express-session": "^1.17.1",
-    "helmet": "^4.4.1",
     "mongoose": "^5.10.3",
     "mongoose-findorcreate": "^3.0.0",
     "nodemailer": "^6.4.11",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
     "passport-local-mongoose": "^6.0.1",
-    "url": "^0.11.0",
-    "xss-clean": "^0.1.1"
+    "url": "^0.11.0"
   }
 }
