--- a/.env.example file
+++ b/.env.example file
@@ -2,7 +2,7 @@ Get your own client_id and client_secret by creating your app in google develope
 Not neccesarry to get client id and client secret just create mongodb url 
 CLIENT_ID=abcdefgh
 CLIENT_SECRET=abcdefgh
-MONGODB_URI = abcdefgh
+MONGODB_URI = mongodb://localhost:27017/JSSConnect
 SECRET = mySecret
 EMAIL = email@email.com 
 PASS = password
