--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jss_connect-master",
   "version": "1.0.0",
-  "description": "[Visit our website here](https://jssconnect.cyclic.app/) <div align=\"center\"> <h2 style=\"text-align:center;font-size:53px;color:red\"><span style=\"color:blue\">JSS</span>CONNECT",
+  "description": "[Visit our website here](https://jssconnect.onrender.com/) <div align=\"center\"> <h2 style=\"text-align:center;font-size:53px;color:red\"><span style=\"color:blue\">JSS</span>CONNECT",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
